dodano puno stvari

--- a/views/comments_safe.ejs
+++ b/views/comments_safe.ejs
@@ -13,11 +13,14 @@
           <a class="nav-link" style="font-size: 2rem; color: black; font-weight: 900; margin-right: 1rem " href="/">WEB2_LAB2</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="font-size: 2rem; color:black" href="/comments-safe">Comments_safe</a>
+          <a class="nav-link" style="font-size: 2rem; color:black" href="/comments-safe">Komentari - safe</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="font-size: 1.2rem; color:black"  href="/comments-vuln">Comments_vuln</a>
-        </li>        
+          <a class="nav-link" style="font-size: 1.2rem; color:black"  href="/comments-vuln">Komentari - vuln</a>
+        </li> 
+        <li class="nav-item">
+          <a class="nav-link" style="font-size: 1.2rem; color:black"  href="/usernamechange">Promjena podataka - vuln</a>
+      </li>       
       </ul>
       <ul class="navbar-nav fs-2 fw-bolder" style="margin-right: 1.8em">        
       </ul>
