--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -13,10 +13,10 @@
               <a class="nav-link" style="font-size: 2rem; color: black; font-weight: 900; margin-right: 1rem " href="/">WEB2_LAB2</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" style="font-size: 1.2rem; color:black"  href="/comments-safe">Comments_safe</a>
+              <a class="nav-link" style="font-size: 1.2rem; color:black"  href="/comments-safe">Komentari - safe</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" style="font-size: 1.2rem; color:black" href="/comments-vuln">Comments_vuln</a>
+              <a class="nav-link" style="font-size: 1.2rem; color:black" href="/comments-vuln">Komentari - vuln</a>
             </li>            
           </ul>
           <ul class="navbar-nav fs-2 fw-bolder" style="margin-right: 1.8em">
@@ -38,6 +38,13 @@
         <input type="submit" value="Prijava">
     </form>
 </div>
+<div style="margin-top: 2rem; margin-left: 2rem">
+  <h3>Podaci o korisniku pohranjeni u bazi:</h3>
+  <h4 style="margin-left:2rem">Username: <%= baseUser %></h4>
+  <h4 style="margin-left:2rem">Lozinka: <%= basePass %></h4>
+  <h4 style="margin-left:2rem">Lozinka: <%= baseEmail %></h4>
+</div>
+
 
 
 </body>
