--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,8 +3,7 @@ body {
   height: 100%;
 }
 
-body {
-  
+body {  
   background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);    
   background-size:auto;
   background-repeat: repeat; 
@@ -263,5 +262,19 @@ form input[type="submit"] {
 .active-link{
   font-size: 2rem;
   color: cyan;
+
+}
+
+
+.tab-desc{
+  -webkit-box-shadow: 3px 3px 14px 1px rgba(0,0,0,0.8);
+  -moz-box-shadow: 3px 3px 14px 1px rgba(0,0,0,0.8);
+  box-shadow: 3px 3px 14px 1px rgba(0,0,0,0.8);
+  color: #000;
+  font-size: 1.2rem;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1rem;
 
 }
