--- a/views/comments_vuln.ejs
+++ b/views/comments_vuln.ejs
@@ -1,9 +1,8 @@
 <!doctype html>
 <html lang="en">
 <%- include(`partials/head`); %>
-<body style="background-repeat:repeat ;background-color: #4158D0;
-background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
-">
+<body style="background-color: #FFE53B;
+background-image: linear-gradient(225deg, #FFE53B 0%, #FF2525 74%);">
   <nav class="navbar navbar-expand-lg navbar-light">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -15,11 +14,14 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
           <a class="nav-link" style="font-size: 2rem; color: black; font-weight: 900; margin-right: 1rem " href="/">WEB2_LAB2</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="font-size: 1.2rem; color:black"  href="/comments-safe">Comments_safe</a>
+          <a class="nav-link" style="font-size: 1.2rem; color:black"  href="/comments-safe">Komentari - safe</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="font-size: 2rem; color:black" href="/comments-vuln">Comments_vuln</a>
+          <a class="nav-link" style="font-size: 2rem; color:black" href="/comments-vuln">Komentari - vuln</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" style="font-size: 1.2rem; color:black"  href="/usernamechange">Promjena podataka - vuln</a>
+      </li>
         
       </ul>
       <ul class="navbar-nav fs-2 fw-bolder" style="margin-right: 1.8em">
@@ -37,7 +39,7 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
           
                 <% if(komentari.length >0) { %>
                     <% for(var kom of komentari) { %>
-                <div style="text-align: center; margin-top: 2rem;">
+                <div style="text-align: center; margin-top: 1rem;">
                     <div class="comment-box" style="margin-left: auto; margin-right: auto; width: 60%;">
                       <div style="display: flex; justify-content: space-between">
                         <div class="comment-username"><%= kom.cdate.toLocaleDateString() %> | <%= kom.ctime %></div>
