--- a/views/usernameChange.ejs
+++ b/views/usernameChange.ejs
@@ -1,8 +1,7 @@
 <!doctype html>
 <html lang="en">
 <%- include(`partials/head`); %>
-<body style=" background-color: #D9AFD9;
-background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%) ">
+<body style="background-color: #FA8BFF;background-image: linear-gradient(45deg, #FA8BFF 0%, #2BD2FF 52%, #2BFF88 90%);">
   <nav class="navbar navbar-expand-lg navbar-light">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -10,39 +9,37 @@ background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%) ">
     </button>
     <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
       <ul class="navbar-nav fs-2 fw-bolder">
-       <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link" style="font-size: 2rem; color: black; font-weight: 900; margin-right: 1rem " href="/">WEB2_LAB2</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="font-size: 1.2rem; color:black"  href="/comments-safe">Komentari - safe</a>
+          <a class="nav-link" style="font-size: 1.2rem; color:black" href="/comments-safe">Komentari - safe</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="font-size: 1.2rem; color:black" href="/comments-vuln">Komentari - vuln</a>
-        </li>
+          <a class="nav-link" style="font-size: 1.2rem; color:black"  href="/comments-vuln">Komentari - vuln</a>
+        </li>    
         <li class="nav-item">
-          <a class="nav-link" style="font-size: 1.2rem; color:black"  href="/usernamechange">Promjena podataka - vuln</a>
-        </li>
-        
+            <a class="nav-link" style="font-size: 2rem; color:black"  href="/usernamechange">Promjena podataka - vuln</a>
+        </li>      
       </ul>
-      <ul class="navbar-nav fs-2 fw-bolder" style="margin-right: 1.8em">
-        <li class="nav-item">
-            <a class="nav-link" style="font-size: 2rem; color:black" href="/logout">Odjava</a>
-        </li>
+      <ul class="navbar-nav fs-2 fw-bolder" style="margin-right: 1.8em">        
       </ul>
     </div>
   </nav>
-  <div style="font-weight: 900; font-size: 2rem;">
-    <span style="padding-left: 0.45em; font-weight: 900; font-size: 2rem;" > Dobrodošli na drugi projekt iz kolegija WEB2 na FER-u.
-  </div>
 
-  <div class="tab-desc"><h3 style="margin-left:1rem">Komentari - safe</h3>
-    <p style="margin-left:1rem">prikazuje komentare čiji je sadržaj enkodiran te neće rezultirati XSS napadom. Komentare je moguće dodati te isprobati hoće li se napad izvršiti</p>
-  </div>
- 
-  <div class="tab-desc"><h3 style="margin-left:1rem">Komentari - vuln</h3>
-    <p style="margin-left:1rem">prikazuje komentare čiji je sadržaj NIJE enkodiran te će rezultirati XSS napadom. Komentari su jednaki onima koji se prikazuju na "Komentari - safe" stranici. </p>
-  </div>
-    
+  <div class="login-box-container">
+    <form action="/changeUserName" method="post">
+        <h2 style="font-weight: 900; margin-top: 1rem;">Unesite podatke za prijavu</h2>
+        <div class="input-field-username">
+            <input type="text" name="username" id="username" placeholder="U n e s i t e    u s e r n a m e" value="">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+        </div>
+        <input type="submit" value="Prijava">
+    </form>
+</div>
+  
+
+
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
   integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
 </script>
