--- a/views/comments_safe.ejs
+++ b/views/comments_safe.ejs
@@ -19,7 +19,7 @@
           <a class="nav-link" style="font-size: 1.2rem; color:black"  href="/comments-vuln">Komentari - vuln</a>
         </li> 
         <li class="nav-item">
-          <a class="nav-link" style="font-size: 1.2rem; color:black"  href="/usernamechange">Promjena podataka - vuln</a>
+          <a class="nav-link" style="font-size: 1.2rem; color:black" href="https://web2-lab2-badserver.onrender.com">CSRF napad</a>
       </li>       
       </ul>
       <ul class="navbar-nav fs-2 fw-bolder" style="margin-right: 1.8em">        
