--- a/views/comments_vuln.ejs
+++ b/views/comments_vuln.ejs
@@ -20,7 +20,7 @@ background-image: linear-gradient(225deg, #FFE53B 0%, #FF2525 74%);">
           <a class="nav-link" style="font-size: 2rem; color:black" href="/comments-vuln">Komentari - vuln</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="font-size: 1.2rem; color:black"  href="/usernamechange">Promjena podataka - vuln</a>
+          <a class="nav-link" style="font-size: 1.2rem; color:black" href="https://web2-lab2-badserver.onrender.com">CSRF napad</a>
       </li>
         
       </ul>
