popravljeno brisanje komentara i dodan opis na introPage

--- a/views/comments_safe.ejs
+++ b/views/comments_safe.ejs
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                     <div class="comment-buttons" style="margin-left: auto; width: 10%;">             
-                      <a class="button-59 button-comment btn-danger" href="/delete"
+                      <a class="button-59 button-comment btn-danger" href="/delete/<%= kom.comment_id %>"
                         style="height: 2em; text-decoration: none;margin: auto 0 auto 0; border-radius: 8px; width: fit-content; margin-left: 0.5rem; margin-bottom: 0.25rem;"><i
                           class="bi bi-trash" style="margin-right: 0.1em;"></i>Obriši</a>
                     </div>
