--- a/views/introPage.ejs
+++ b/views/introPage.ejs
@@ -54,6 +54,7 @@ background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%) ">
     <p style="margin-left:1rem">Poveznica za pokretanje CSRF napada. Inače bi ta poveznica bila podmenuta u komentare kao link na neku stranicu kojoj korisnik vjeruje,
        čak je moguće da se i prilikom otvaranja na njoj nalazi očekivani sadržaj, ali se zapravo odmah pri pristupanju stranici izvršava napadačev kod za slanjem zahtjeva za npr. promjenu email adrese na vrijednost
       koju on odabere. Nakon toga bi napadač mogao pomoću novog maila zatražiti "password reset" te bi tako dobio potpuni pristup računu korisnika. </p>
+      <p style="margin-left:1rem">** u komentarima se nalaze i 2 linka koji demonstriraju kako CSRF napada zapravo izgleda.</p>
   </div>
     
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
