--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -43,10 +43,7 @@
   <h3>Podaci o korisniku pohranjeni u bazi:</h3>
   <h4 style="margin-left:2rem">Username: <%= baseUser %></h4>
   <h4 style="margin-left:2rem">Lozinka: <%= basePass %></h4>
-  <h4 style="margin-left:2rem">Lozinka: <%= baseEmail %></h4>
+  <h4 style="margin-left:2rem">Email: <%= baseEmail %></h4>
 </div>
-
-
-
 </body>
 </html>
